--- a/website/static/homepage.css
+++ b/website/static/homepage.css
@@ -1,104 +1,271 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-header {
+.header-icon{
+    width: 100%;
+    height:64px;
+    background-color: #003366;
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
-    padding: 20px;
-    background-color: #007bff;
-    color: white;
+    justify-content: space-evenly;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
-.logo {
-    width: 100px;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-nav ul li {
-    margin-left: 20px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-section {
-    padding: 60px 20px;
-    text-align: center;
-}
-
-.features-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-}
-
-.feature {
-    background: #f4f4f4;
-    padding: 20px;
-    border-radius: 10px;
-}
-
-blockquote {
-    background: #f4f4f4;
-    padding: 20px;
-    border-left: 5px solid #007bff;
-    margin: 20px auto;
-    max-width: 600px;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 600px;
-    margin: 0 auto;
-}
-
-form label {
-    text-align: left;
-}
-
-form input, form textarea, form button {
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-form button {
-    background-color: #007bff;
-    color: white;
-    border: none;
+.header-icon svg{
     cursor: pointer;
 }
 
-form button:hover {
-    background-color: #0056b3;
+.title-section{
+    display: flex;
+    height: fit-content;
+    margin-top: 145px;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
 }
 
-footer {
+.title-section h2{
+    font-size: 36px; 
+    color: #003366;
+    margin: 0;
+    padding:0;
     text-align: center;
-    padding: 20px;
-    background-color: #007bff;
-    color: white;
+    margin-left: 25px;
+    margin-right: 25px; 
+    margin-top: 64px;
 }
 
-footer a {
-    color: white;
-    text-decoration: none;
+.title-section h5{
+    font-size: 20px;
+    color: #666666;
+    margin-top: 30px;
+    margin-left: 19px;
+    margin-right: 19px;
 }
 
-footer a:hover {
-    text-decoration: underline;
+.title-section button{
+    background-color: #003366;
+    color: #F2F2F2;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 20px;
+    width: 40%;
+    font-size: 20px;
 }
+
+.key-features{
+    display: flex;
+    height: fit-content;
+    margin-top: 145px;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+    background-color: #33CCFF;
+    padding-bottom: 55px;
+}
+
+.key-features h2{
+    font-size: 36px; 
+    color: #003366;
+    margin: 0;
+    padding:0;
+    text-align: center;
+    margin-left: 25px;
+    margin-right: 25px; 
+    margin-top: 65px; 
+}
+
+.key-features-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+}
+
+.key-features-content h4{
+    font-size: 18px;
+    color: #003366; 
+    margin: 0;
+    padding:0;
+    margin-left: 19px;
+    margin-right: 19px;
+    margin-top: 44px;
+}
+
+.key-features-content p{
+    font-size: 17px;
+    color: #003366; 
+    margin: 0;
+    padding:0;
+    margin-left: 19px;
+    margin-right: 19px;
+    margin-top: 10px;
+}
+
+.how-works{
+    display: flex;
+    height: fit-content;
+    margin-top: 145px;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    align-items: center; 
+}
+
+.how-works h2{
+    font-size: 36px; 
+    color: #003366;
+    margin: 0;
+    padding:0;
+    text-align: center;
+    margin-left: 25px;
+    margin-right: 25px;  
+}
+
+.how-works h4{
+    font-size: 18px;
+    color: #003366; 
+    margin: 0;
+    padding:0;
+    margin-left: 19px;
+    margin-right: 19px;
+    margin-top: 44px;
+}
+
+.about-us{ 
+    display: flex;
+    height: fit-content;
+    margin-top: 145px;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    align-items: center; 
+    background-color: #33CCFF;
+    padding-bottom: 55px;
+}
+
+.about-us h2{
+    font-size: 36px; 
+    color: #003366;
+    margin: 0;
+    padding:0;
+    text-align: center;
+    margin-left: 25px;
+    margin-right: 25px;  
+    margin-top: 35px;
+}
+
+.about-us p{
+    font-size: 17px;
+    color: #003366; 
+    margin: 0;
+    padding:0;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-top: 30px;
+    line-height: 1.8;
+    text-align: center;
+}
+
+
+.control-form{
+    display: flex;
+    height: fit-content;
+    margin-top: 100px;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    align-items: center;  
+    padding-bottom: 55px;
+}
+
+.control-form h2{
+    font-size: 36px;
+    color: #003366;
+    margin: 0;
+    padding:0;
+    text-align: center;
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-top: 35px;
+}
+
+.control-input{
+    display:flex;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
+    width: 80%;
+    justify-content: flex-start;
+}
+
+.control-input label{
+    font-size: 17px;
+    color: #003366; 
+    margin: 0;
+    padding:0;
+    margin-left: 19px;
+    margin-right: 19px;
+    margin-top: 10px;
+}
+
+.control-input input{
+    font-size: 17px;
+    color: #003366; 
+    margin: 0;
+    padding:0;
+    margin-left: 19px;
+    margin-right: 19px;
+    margin-top: 10px;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #003366;
+    padding-left: 20px;
+}
+
+.control-form button{
+    font-size: 17px;
+    color: #003366; 
+    margin: 0;
+    padding:0;  
+    height: fit-content;
+    border-radius: 5px; 
+    background-color: #003366;
+    cursor: pointer;
+    width: 70%;
+    color: #F2F2F2;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 35px;
+}
+
+.footer{
+    display: flex;
+    height: fit-content;
+    margin-top: 30px;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+    padding-bottom: 10px;
+    background-color: #D9D9D9;
+    padding-top: 16px;
+    row-gap: 10px;
+}
+
+.footer h3{
+    margin: 0;
+    padding:0;
+    color: #003366;
+}
+
+
+
+
