--- a/website/static/patient_page.css
+++ b/website/static/patient_page.css
@@ -54,6 +54,8 @@
     padding: clamp(5px, 2vw, 10px) clamp(10px, 4vw, 20px);
     border: none;
     cursor: pointer;
+    opacity: 0.5;
+    cursor:not-allowed;
 }
 
 .default-button{ 
@@ -66,7 +68,6 @@
     background-color: #007BFF;
 }
 
-
 .patient-section{
     display: flex;
     flex-direction: column;
@@ -74,10 +75,11 @@
     margin-top: 40px;
     row-gap: 20px;
     align-items: center; 
+    margin-bottom: 35px;
 }
 
 
-#add-patient-button{
+#back-patient-button{
     width: fit-content;
     padding: 10px 20px;
     background-color: #003366;
@@ -92,92 +94,141 @@
 }
 
 
-.patient-list{
-    height: fit-content;
-    width: 100%;
+.patient-section{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    row-gap: 20px;
-    margin-top: 24px;
-    padding-bottom: 50px;
-} 
-.patient-card{
-    display: flex;
-    flex-direction: row;
     width: 100%;
-    height: 95px;
+    margin-top: 40px;
+    row-gap: 20px;
     align-items: center;
-    justify-content: space-between; 
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
+}
 
-} 
-
-.patient-card img{
-    width: 30%;
-    height: 100%; 
-    margin-right: 20px;
+.patient-section img{
+    width: calc(111px + 35px);
+    height: calc(96px + 35px);
     border: 2px solid #003366;
     border-radius: 4px;
 }
-.patient-info{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    display: flex;
-    flex-direction: column;
-    width: 65%;
-    height: 100%;
-}
 
-.patient-info h3{
-    flex : 1;
+.patient-section h2{
+    margin: 0;
+    padding: 0;
     font-size: 24px;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+    color: #000000;
 }
 
-.patient-info h5{
-    flex : 1;
-    font-size: 16px;
+.patient-section h5{
     margin: 0;
     padding: 0;
-    margin-top: 8px;
+    font-size: 18px;
+    color: #666666;
 }
 
-.patient-action-buttons{
-    flex : 1;
+.medications-action-buttons{
     display: flex;
     flex-direction: row;
-    width: 95%;
-    justify-content: flex-end; 
-    column-gap: 15px;  
-    padding-top: 10px;
-    
+    width: 100%;
+    justify-content: center;
+    column-gap: 10px;
 }
 
-.patient-action-buttons button{
+.medications-action-buttons button{
     width: fit-content;
+    padding: 10px 20px;
     background-color: #003366;
     color: #F2F2F2;
     height: fit-content;
+    align-self: flex-end;
+    justify-self: flex-end;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-right: 26px;
+    font-size: 14px;
+    margin-top: 20px;
+}
+
+.medications-table{
+    width: 100%;
+    margin-top: 20px;
+    background-color: #D9D9D9;
+}
+
+.medications-table h4{
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    margin-bottom: 10px;
+    text-align: center;
+    width: 100%;
+    background-color :#003366;
+    color:#F2F2F2;
+    padding: 10px 0px;
+    border-radius: 8px 8px 0px 0px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.35);
+}
+
+.medication-row-container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 30px;
+    align-items: center;
+    height: fit-content;
+}
+ 
+.medication-row{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    row-gap: 10px;
+    margin-top: 24px;
+    background-color: white;
+    padding: 10px 0px;
+}
+
+
+.medication-row p{
+    margin : 0;
+    padding: 0;
+    font-size: 16px;
+    color: #000000;
+    flex: 1;
+    text-align: left;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    margin-left: 20px;
+}
+
+.medication-row button{
+    width: fit-content;
+    background-color: #66000C;
+    color: #F2F2F2;
+    height: fit-content;
+    align-self: center;
+    justify-self: center;
     border-radius: 4px;
     cursor: pointer;
     font-size: 14px;
-    border: none;
     padding: 5px 15px;
+    border-radius: 2px;
+    border: none;
+    margin-right: 20px;
 }
 
-.patient-action-buttons button:nth-child(2){
-    background-color: #66000C;
-}
 
 
-.patient-add-form{ 
+
+
+
+
+
+
+
+
+
+
+.once-medication-form{ 
     position: fixed; 
     left: 0px;
     top: 0px;
@@ -193,7 +244,7 @@
     justify-content: center;
 }
 
-.patient-fill-up-form{
+.once-medication-fill-up-form{
     display: flex;
     width: clamp(320px , 500px , 500px );
     height: fit-content;  
@@ -204,14 +255,24 @@
     align-items: center;
 }
 
-.patient-fill-up-form h3{
+.once-medication-fill-up-form h3{
     font-size: 28px;
     color: #F2F2F2;
     margin: 0;
     margin-top: 35px;
 }
 
-.patient-fill-line{
+.once-medication-information{
+    text-align: center;
+    margin: 0;
+    margin-top: 34px;
+    width: 70%;
+    font-size: 18px;
+    color: #F2F2F2;
+    margin-bottom: 20px;
+}
+
+.once-medication-fill-line{
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -219,14 +280,14 @@
     margin-top: 16px;
 }
 
-.patient-fill-line label{
+.once-medication-fill-line label{
     color: #F2F2F2;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
 
-.patient-fill-line input{
+.once-medication-fill-line input , .once-medication-fill-line select{
     padding-left: 10px;
     width: 80%;
     margin-left: 25px;
@@ -236,6 +297,8 @@
     padding-bottom: 5px;
     border-radius: 4px;
 }
+
+
 
 .form-action-buttons{
     display: flex;
@@ -272,116 +335,13 @@
 
 
 
-.nurse-section{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin-top: 40px;
-    row-gap: 20px;
-    align-items: center; 
-}
 
 
-#add-nurse-button{
-    width: fit-content;
-    padding: 10px 20px;
-    background-color: #003366;
-    color: #F2F2F2;
-    height: fit-content;
-    align-self: flex-end;
-    justify-self: flex-end;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-right: 26px;
-    font-size: 14px;
-} 
-
-.nurse-list{
-    height: fit-content;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 20px;
-    margin-top: 24px;
-    padding-bottom: 50px;
-} 
-.nurse-card{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 95px;
-    align-items: center;
-    justify-content: space-between; 
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-
-} 
-
-.nurse-card img{
-    width: 30%;
-    height: 100%; 
-    margin-right: 20px;
-    border: 2px solid #003366;
-    border-radius: 4px;
-}
-.nurse-info{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    display: flex;
-    flex-direction: column;
-    width: 65%;
-    height: 100%;
-}
-
-.nurse-info h3{
-    flex : 1;
-    font-size: 24px;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-.nurse-info h5{
-    flex : 1;
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
-    margin-top: 8px;
-}
-
-.nurse-action-buttons{
-    flex : 1;
-    display: flex;
-    flex-direction: row;
-    width: 95%;
-    justify-content: flex-end; 
-    column-gap: 15px;  
-    padding-top: 10px;
-    
-}
-
-.nurse-action-buttons button{
-    width: fit-content;
-    background-color: #003366;
-    color: #F2F2F2;
-    height: fit-content;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px;
-    border: none;
-    padding: 5px 15px;
-}
-
-.nurse-action-buttons button:nth-child(2){
-    background-color: #66000C;
-}
 
 
-.nurse-add-form{ 
+
+
+.daily-medication-form{ 
     position: fixed; 
     left: 0px;
     top: 0px;
@@ -397,7 +357,7 @@
     justify-content: center;
 }
 
-.nurse-fill-up-form{
+.daily-medication-fill-up-form{
     display: flex;
     width: clamp(320px , 500px , 500px );
     height: fit-content;  
@@ -408,14 +368,24 @@
     align-items: center;
 }
 
-.nurse-fill-up-form h3{
+.daily-medication-fill-up-form h3{
     font-size: 28px;
     color: #F2F2F2;
     margin: 0;
     margin-top: 35px;
 }
 
-.nurse-fill-line{
+.daily-medication-information{
+    text-align: center;
+    margin: 0;
+    margin-top: 34px;
+    width: 70%;
+    font-size: 18px;
+    color: #F2F2F2;
+    margin-bottom: 20px;
+}
+
+.daily-medication-fill-line{
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -423,14 +393,14 @@
     margin-top: 16px;
 }
 
-.nurse-fill-line label{
+.daily-medication-fill-line label{
     color: #F2F2F2;
     font-size: 16px;
     margin: 0;
     padding: 0;
 }
 
-.nurse-fill-line input{
+.daily-medication-fill-line input , .daily-medication-fill-line select{
     padding-left: 10px;
     width: 80%;
     margin-left: 25px;
@@ -440,3 +410,6 @@
     padding-bottom: 5px;
     border-radius: 4px;
 }
+
+
+ 
