--- a/website/static/datamanager_page.css
+++ b/website/static/datamanager_page.css
@@ -229,7 +229,7 @@
     padding: 0;
 }
 
-.patient-fill-line input{
+.patient-fill-line input , .patient-fill-line select{
     padding-left: 10px;
     width: 80%;
     margin-left: 25px;
