--- a/website/static/homepage.css
+++ b/website/static/homepage.css
@@ -27,13 +27,13 @@
 }
 
 .title-section h2{
-    font-size: 36px; 
+    font-size: 36px;
     color: #003366;
     margin: 0;
     padding:0;
     text-align: center;
     margin-left: 25px;
-    margin-right: 25px; 
+    margin-right: 25px;
     margin-top: 64px;
 }
 
@@ -43,6 +43,7 @@
     margin-top: 30px;
     margin-left: 19px;
     margin-right: 19px;
+    text-align : center;
 }
 
 .title-section button{
@@ -70,14 +71,14 @@
 }
 
 .key-features h2{
-    font-size: 36px; 
+    font-size: 36px;
     color: #003366;
     margin: 0;
     padding:0;
     text-align: center;
     margin-left: 25px;
-    margin-right: 25px; 
-    margin-top: 65px; 
+    margin-right: 25px;
+    margin-top: 65px;
 }
 
 .key-features-content{
@@ -90,7 +91,7 @@
 
 .key-features-content h4{
     font-size: 18px;
-    color: #003366; 
+    color: #003366;
     margin: 0;
     padding:0;
     margin-left: 19px;
@@ -100,7 +101,7 @@
 
 .key-features-content p{
     font-size: 17px;
-    color: #003366; 
+    color: #003366;
     margin: 0;
     padding:0;
     margin-left: 19px;
@@ -115,22 +116,22 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    align-items: center; 
+    align-items: center;
 }
 
 .how-works h2{
-    font-size: 36px; 
+    font-size: 36px;
     color: #003366;
     margin: 0;
     padding:0;
     text-align: center;
     margin-left: 25px;
-    margin-right: 25px;  
+    margin-right: 25px;
 }
 
 .how-works h4{
     font-size: 18px;
-    color: #003366; 
+    color: #003366;
     margin: 0;
     padding:0;
     margin-left: 19px;
@@ -138,32 +139,32 @@
     margin-top: 44px;
 }
 
-.about-us{ 
+.about-us{
     display: flex;
     height: fit-content;
     margin-top: 145px;
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    align-items: center; 
+    align-items: center;
     background-color: #33CCFF;
     padding-bottom: 55px;
 }
 
 .about-us h2{
-    font-size: 36px; 
+    font-size: 36px;
     color: #003366;
     margin: 0;
     padding:0;
     text-align: center;
     margin-left: 25px;
-    margin-right: 25px;  
+    margin-right: 25px;
     margin-top: 35px;
 }
 
 .about-us p{
     font-size: 17px;
-    color: #003366; 
+    color: #003366;
     margin: 0;
     padding:0;
     margin-left: 24px;
@@ -181,7 +182,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    align-items: center;  
+    align-items: center;
     padding-bottom: 55px;
 }
 
@@ -208,7 +209,7 @@
 
 .control-input label{
     font-size: 17px;
-    color: #003366; 
+    color: #003366;
     margin: 0;
     padding:0;
     margin-left: 19px;
@@ -218,7 +219,7 @@
 
 .control-input input{
     font-size: 17px;
-    color: #003366; 
+    color: #003366;
     margin: 0;
     padding:0;
     margin-left: 19px;
@@ -232,11 +233,11 @@
 
 .control-form button{
     font-size: 17px;
-    color: #003366; 
+    color: #003366;
     margin: 0;
-    padding:0;  
+    padding:0;
     height: fit-content;
-    border-radius: 5px; 
+    border-radius: 5px;
     background-color: #003366;
     cursor: pointer;
     width: 70%;
