--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Well - E</title>
+    <link rel="icon" href="{% static 'icon.svg' %}" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
-    
-    <style> 
+
+    <style>
         .roboto-bold {
             font-family: "Roboto", serif;
             font-optical-sizing: auto;
@@ -36,21 +37,21 @@
             font-variation-settings:
               "wdth" 100;
           }
-          
+
     </style>
-    
+
     <link rel="stylesheet" href="{% static 'base.css' %}">
     {% block headblock %}
-        
+
     {% endblock headblock %}
-        
+
 </head>
-<body> 
+<body>
     <main>
         {% block bodyblock %}
-            
-        {% endblock bodyblock %} 
+
+        {% endblock bodyblock %}
     </main>
-    
+
 </body>
 </html>
