--- a/website/templates/datamanager_page.html
+++ b/website/templates/datamanager_page.html
@@ -195,7 +195,7 @@
                                     <h3 class="roboto-medium">${nurse.name}</h3>
                                     <h5 class="roboto-light">Date Added : ${formattedDateStr}</h5>
                                     <div class="nurse-action-buttons">
-                                        <button style="display: none;"></button> 
+                                        <button onclick="window.location.href='../nurse/${nurse.id}'">Check Nurse</button> 
                                         <button id="nurse-delete-${nurse.id}">Delete Nurse</button>
                                     </div>
                                 </div>
